# NutshellEngine-Application

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/image_samplers/: image_sampler.ntsp
assets/materials/: material.ntml
assets/models/: model.ntmd
assets/options/: options.ntop
assets/scenes/: scene.ntsn
scripts/: CameraScript.h  CubeScript.h  GameTestScript.h  GamepadTestScript.h  camerascript.h  cubescript.h  gamepadtestscript.h  generate_script_manager.py  generate_scriptable_factory.py  ntshengn_script_manager.cpp  ntshengn_scriptable_factory.h
scripts/script_manager/: generate_script_manager.py  ntshengn_script_manager.cpp
